Fix some small lints
- Make what can be final final
- Add @Serial
- Use .isEmpty for string checking
- Remove unneeded .toString s
- Set a constant for "Expires"
- Remove unused throws IOExceptions
- delete commented out code
- Use StandardCharsets.UTF_8
- Use list separator rather than or separator in regex